--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <script>
             const images = ["img-1.jpg", "img-2.jpg", "img-3.jpg"];
-            const texts = [["UNLOCKED"], ["OFFBEAT"], ["ASTERISKS"]];
+            const texts = [["LCK_73"], ["OFFBEAT"], ["ASTERISKS"]];
 
             rgbKineticSlider = new rgbKineticSlider({
                 slideImages: images,
@@ -61,7 +61,7 @@
                 textsDisplay: true,
                 textTitleSize: 144,
                 textsTiltEffect: true,
-                googleFonts: ["Playfair Display:400"],
+                googleFonts: ["Inter Display:700"],
                 textsRgbEffect: true,
                 textsRgbIntensity: 1,
             });
