--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <main>
             <div class="slider">
                 <div id="rgbKineticSlider" class="rgbKineticSlider"></div>
-                <nav>
+                <!-- <nav>
                     <a href="#" class="main-nav prev" data-nav="previous">Prev <span></span></a>
                     <a href="#" class="main-nav next" data-nav="next">Next <span></span></a>
-                </nav>
+                </nav> -->
             </div>
         </main>
 
@@ -51,8 +51,8 @@
                 transitionScaleIntensity: 30,
                 transitionScaleAmplitude: 160,
 
-                nav: true,
-                navElement: ".main-nav",
+                /*nav: true,
+                navElement: ".main-nav",*/
 
                 imagesRgbEffect: false,
                 imagesRgbIntensity: 4,
@@ -61,7 +61,7 @@
                 textsDisplay: true,
                 textTitleSize: 144,
                 textsTiltEffect: true,
-                googleFonts: ["Playfair Display:400"],
+                googleFonts: ["Noto Sans Display:700"],
                 textsRgbEffect: true,
                 textsRgbIntensity: 1,
             });
