--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 textsDisplay: true,
                 textTitleSize: 144,
                 textsTiltEffect: true,
-                googleFonts: ["Noto Sans Display:700"],
+                googleFonts: ["Playfair Display:400"],
                 textsRgbEffect: true,
                 textsRgbIntensity: 1,
             });
